--- a/artifacts/inv.sdcio.dev_discoveryvendorprofiles.yaml
+++ b/artifacts/inv.sdcio.dev_discoveryvendorprofiles.yaml
@@ -47,6 +47,7 @@ spec:
                     - JSON
                     - JSON_IETF
                     - PROTO
+                    - ASCII
                     type: string
                     x-kubernetes-validations:
                     - message: encoding is immutable
