--- a/example/discoveryvendor-profile/discoveryvendor-profile-nokia-sros.yaml
+++ b/example/discoveryvendor-profile/discoveryvendor-profile-nokia-sros.yaml
@@ -15,6 +15,7 @@ spec:
     paths:
     - key: version
       path: state/system/version/version-number
+      regex: ^\w?-(\d+.\d+\.R\d+)
     - key: platform
       path: state/system/platform
     - key: hostname
