--- a/artifacts/in/configmap-input-vars.yaml
+++ b/artifacts/in/configmap-input-vars.yaml
@@ -3,5 +3,7 @@ kind: ConfigMap
 metadata:
   name: context
 data: 
-  configServerImage: europe-docker.pkg.dev/srlinux/eu.gcr.io/config-server:latest
-  dataServerImage: ghcr.io/sdcio/data-server:v0.0.53
+  #configServerImage: europe-docker.pkg.dev/srlinux/eu.gcr.io/config-server:latest
+  #dataServerImage: ghcr.io/sdcio/data-server:v0.0.53
+  configServerImage: ghcr.io/sdcio/config-server:v0.0.47
+  dataServerImage: ghcr.io/steiler/data-server:v0.0.0-bbd639d
