--- a/.github/workflows/dev-nightlies.yml
+++ b/.github/workflows/dev-nightlies.yml
@@ -9,9 +9,6 @@ on:
     - cron: "5 20 * * *"
   workflow_dispatch:
 
-env:
-    GOVER: 1.21.4
-
 jobs:
   dev-release:
     runs-on: sdcio-action-runners
@@ -32,7 +29,7 @@ jobs:
 
       - uses: actions/setup-go@v5
         with:
-          go-version: ${{ env.GOVER }}
+          go-version-file: 'go.mod'
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
