--- a/artifacts/in/configmap-input-vars.yaml
+++ b/artifacts/in/configmap-input-vars.yaml
@@ -5,6 +5,5 @@ metadata:
 data: 
   #configServerImage: europe-docker.pkg.dev/srlinux/eu.gcr.io/config-server:latest
   #dataServerImage: ghcr.io/sdcio/data-server:v0.0.53
-  configServerImage: europe-docker.pkg.dev/srlinux/eu.gcr.io/config-server:latest
-  dataServerImage: ghcr.io/sdcio/data-server:v0.0.54
-  #dataServerImage: ghcr.io/steiler/data-server:v0.0.0-bbd639d
+  configServerImage: ghcr.io/sdcio/config-server:v0.0.52
+  dataServerImage: ghcr.io/sdcio/data-server:v0.0.60
