--- a/crds/config.sdcio.dev_deviations.yaml
+++ b/crds/config.sdcio.dev_deviations.yaml
@@ -4,22 +4,22 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.12.1
-  name: configs.config.sdcio.dev
+  name: deviations.config.sdcio.dev
 spec:
   group: config.sdcio.dev
   names:
     categories:
     - sdc
-    kind: Config
-    listKind: ConfigList
-    plural: configs
-    singular: config
+    kind: Deviation
+    listKind: DeviationList
+    plural: deviations
+    singular: deviation
   scope: Namespaced
   versions:
   - name: config
     schema:
       openAPIV3Schema:
-        description: Config defines the Schema for the Config API
+        description: Deviation is the Schema for the Deviation API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -34,82 +34,34 @@ spec:
           metadata:
             type: object
           spec:
-            description: ConfigSpec defines the desired state of Config
+            description: DeviationSpec defines the desired state of Deviation
             properties:
-              config:
-                description: Config defines the configuration to be applied to a target
-                  device
+              deviations:
+                description: Deviations identify the configuration deviation based
+                  on the last applied config CR
                 items:
                   properties:
-                    path:
-                      description: Path defines the path relative to which the value
-                        is applicable
+                    actualValue:
+                      description: CurrentValue defines the current value of the config
+                        belonging to the path that is currently configured on the
+                        target
                       type: string
-                    value:
-                      type: object
-                      x-kubernetes-preserve-unknown-fields: true
-                  required:
-                  - value
+                    desiredValue:
+                      description: DesiredValue is the desired value of the config
+                        belonging to the path
+                      type: string
+                    path:
+                      description: Path of the config this deviation belongs to
+                      type: string
+                    reason:
+                      description: Reason defines the reason of the deviation
+                      type: string
                   type: object
                 type: array
-                x-kubernetes-preserve-unknown-fields: true
-              lifecycle:
-                description: Lifecycle determines the lifecycle policies the resource
-                  e.g. delete is orphan or delete will follow
-                properties:
-                  deletionPolicy:
-                    description: DeletionPolicy specifies what will happen to the
-                      underlying resource when this resource is deleted - either "delete"
-                      or "orphan" the resource.
-                    type: string
-                type: object
-              priority:
-                description: Priority defines the priority of this config
-                format: int64
-                type: integer
-            required:
-            - config
             type: object
           status:
-            description: ConfigStatus defines the observed state of Config
+            description: DeviationStatus defines the observed state of Deviation
             properties:
-              appliedConfig:
-                description: AppliedConfig defines the config applied to the target
-                properties:
-                  config:
-                    description: Config defines the configuration to be applied to
-                      a target device
-                    items:
-                      properties:
-                        path:
-                          description: Path defines the path relative to which the
-                            value is applicable
-                          type: string
-                        value:
-                          type: object
-                          x-kubernetes-preserve-unknown-fields: true
-                      required:
-                      - value
-                      type: object
-                    type: array
-                    x-kubernetes-preserve-unknown-fields: true
-                  lifecycle:
-                    description: Lifecycle determines the lifecycle policies the resource
-                      e.g. delete is orphan or delete will follow
-                    properties:
-                      deletionPolicy:
-                        description: DeletionPolicy specifies what will happen to
-                          the underlying resource when this resource is deleted -
-                          either "delete" or "orphan" the resource.
-                        type: string
-                    type: object
-                  priority:
-                    description: Priority defines the priority of this config
-                    format: int64
-                    type: integer
-                required:
-                - config
-                type: object
               conditions:
                 description: Conditions of the resource.
                 items:
@@ -173,20 +125,6 @@ spec:
                 x-kubernetes-list-map-keys:
                 - type
                 x-kubernetes-list-type: map
-              lastKnownGoodSchema:
-                description: LastKnownGoodSchema identifies the last known good schema
-                  used to apply the config successfully
-                properties:
-                  type:
-                    description: Schema Type
-                    type: string
-                  vendor:
-                    description: Schema Vendor
-                    type: string
-                  version:
-                    description: Schema Version
-                    type: string
-                type: object
             type: object
         type: object
     served: true
@@ -196,7 +134,7 @@ spec:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: Config defines the Schema for the Config API
+        description: Deviation is the Schema for the Deviation API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -211,90 +149,34 @@ spec:
           metadata:
             type: object
           spec:
-            description: ConfigSpec defines the desired state of Config
+            description: DeviationSpec defines the desired state of Deviation
             properties:
-              config:
-                description: Config defines the configuration to be applied to a target
-                  device
+              deviations:
+                description: Deviations identify the configuration deviation based
+                  on the last applied config CR
                 items:
                   properties:
-                    path:
-                      description: Path defines the path relative to which the value
-                        is applicable
+                    actualValue:
+                      description: CurrentValue defines the current value of the config
+                        belonging to the path that is currently configured on the
+                        target
                       type: string
-                    value:
-                      type: object
-                      x-kubernetes-preserve-unknown-fields: true
-                  required:
-                  - value
+                    desiredValue:
+                      description: DesiredValue is the desired value of the config
+                        belonging to the path
+                      type: string
+                    path:
+                      description: Path of the config this deviation belongs to
+                      type: string
+                    reason:
+                      description: Reason defines the reason of the deviation
+                      type: string
                   type: object
                 type: array
-                x-kubernetes-preserve-unknown-fields: true
-              lifecycle:
-                description: Lifecycle determines the lifecycle policies the resource
-                  e.g. delete is orphan or delete will follow
-                properties:
-                  deletionPolicy:
-                    default: delete
-                    description: DeletionPolicy specifies what will happen to the
-                      underlying resource when this resource is deleted - either "delete"
-                      or "orphan" the resource.
-                    enum:
-                    - delete
-                    - orphan
-                    type: string
-                type: object
-              priority:
-                description: Priority defines the priority of this config
-                format: int64
-                type: integer
-            required:
-            - config
             type: object
           status:
-            description: ConfigStatus defines the observed state of Config
+            description: DeviationStatus defines the observed state of Deviation
             properties:
-              appliedConfig:
-                description: AppliedConfig defines the config applied to the target
-                properties:
-                  config:
-                    description: Config defines the configuration to be applied to
-                      a target device
-                    items:
-                      properties:
-                        path:
-                          description: Path defines the path relative to which the
-                            value is applicable
-                          type: string
-                        value:
-                          type: object
-                          x-kubernetes-preserve-unknown-fields: true
-                      required:
-                      - value
-                      type: object
-                    type: array
-                    x-kubernetes-preserve-unknown-fields: true
-                  lifecycle:
-                    description: Lifecycle determines the lifecycle policies the resource
-                      e.g. delete is orphan or delete will follow
-                    properties:
-                      deletionPolicy:
-                        default: delete
-                        description: DeletionPolicy specifies what will happen to
-                          the underlying resource when this resource is deleted -
-                          either "delete" or "orphan" the resource.
-                        enum:
-                        - delete
-                        - orphan
-                        type: string
-                    type: object
-                  priority:
-                    description: Priority defines the priority of this config
-                    format: int64
-                    type: integer
-                required:
-                - config
-                type: object
               conditions:
                 description: Conditions of the resource.
                 items:
@@ -358,20 +240,6 @@ spec:
                 x-kubernetes-list-map-keys:
                 - type
                 x-kubernetes-list-type: map
-              lastKnownGoodSchema:
-                description: LastKnownGoodSchema identifies the last known good schema
-                  used to apply the config successfully
-                properties:
-                  type:
-                    description: Schema Type
-                    type: string
-                  vendor:
-                    description: Schema Vendor
-                    type: string
-                  version:
-                    description: Schema Version
-                    type: string
-                type: object
             type: object
         type: object
     served: true
