--- a/artifacts/in/configmap-input-vars.yaml
+++ b/artifacts/in/configmap-input-vars.yaml
@@ -3,7 +3,5 @@ kind: ConfigMap
 metadata:
   name: context
 data: 
-  #configServerImage: europe-docker.pkg.dev/srlinux/eu.gcr.io/config-server:latest
-  #dataServerImage: ghcr.io/sdcio/data-server:v0.0.53
-  configServerImage: ghcr.io/sdcio/config-server:v0.0.52
-  dataServerImage: ghcr.io/sdcio/data-server:v0.0.60
+  configServerImage: europe-docker.pkg.dev/srlinux/eu.gcr.io/config-server:latest
+  dataServerImage: ghcr.io/sdcio/data-server:v0.0.61
