--- a/artifacts/rbac-cluster-role-controller.yaml
+++ b/artifacts/rbac-cluster-role-controller.yaml
@@ -22,7 +22,7 @@ rules:
   resources: ["configsets", "configsets/status"]
   verbs: ["get", "watch", "list", "create", "update", "patch", "delete"]
 - apiGroups: ["config.sdcio.dev"]
-  resources: ["unmanagedconfigs", "unmanagedconfigs/status"]
+  resources: ["deviations", "deviations/status"]
   verbs: ["get", "watch", "list", "create", "update", "patch", "delete"]
 - apiGroups: ["inv.sdcio.dev"]
   resources: ["targets", "targets/status"]
