--- a/artifacts/deployment.yaml
+++ b/artifacts/deployment.yaml
@@ -72,12 +72,14 @@ spec:
           value: "true"
         - name: ENABLE_TARGETCONFIGSERVER
           value: "true"
+        - name: ENABLE_TARGETRECOVERYSERVER
+          value: "true"
         - name: ENABLE_DISCOVERYRULE
           value: "true"
         - name: ENABLE_SCHEMA
           value: "true"
-        - name: ENABLE_CONFIG
-          value: "true"
+        #- name: ENABLE_CONFIG
+        #  value: "true"
         - name: ENABLE_CONFIGSET
           value: "true"
         - name: ENABLE_WORKSPACE
