--- a/artifacts/deployment.yaml
+++ b/artifacts/deployment.yaml
@@ -62,6 +62,8 @@ spec:
               fieldPath: status.hostIP
         - name: PPROF_PORT
           value: "8081"
+        - name: REVERTIVE
+          value: "true"
         - name: ENABLE_SUBSCRIPTION
           value: "true"
         - name: ENABLE_TARGET
@@ -70,12 +72,14 @@ spec:
           value: "true"
         - name: ENABLE_TARGETCONFIGSERVER
           value: "true"
+        - name: ENABLE_TARGETRECOVERYSERVER
+          value: "true"
         - name: ENABLE_DISCOVERYRULE
           value: "true"
         - name: ENABLE_SCHEMA
           value: "true"
-        - name: ENABLE_CONFIG
-          value: "true"
+        #- name: ENABLE_CONFIG
+        #  value: "true"
         - name: ENABLE_CONFIGSET
           value: "true"
         - name: ENABLE_WORKSPACE
