--- a/example/discoveryvendor-profile/discoveryvendor-profile-nokia-srlinux.yaml
+++ b/example/discoveryvendor-profile/discoveryvendor-profile-nokia-srlinux.yaml
@@ -1,4 +1,4 @@
-# DO NOT UPDATE THESE FILES OR CHANGE THE NAME, RATHER CREATE NEW ONCE
+# DO NOT UPDATE THESE FILES OR CHANGE THE NAME, RATHER CREATE NEW ONES
 # These files have 2 purposes
 # 1. they serve as unit tests
 # 2. they can be used as discovery rules examples
