update CI/CD to run from github actions public runners

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ permissions: read-all
 
 jobs:
   unittest:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
       
@@ -39,7 +39,7 @@ jobs:
       #     fail_on_error: true
   pr-release:
     if: contains(github.event.pull_request.labels.*.name, 'safe to test')
-    runs-on: sdcio-action-runners
+    runs-on: ubuntu-latest
     needs: unittest
     outputs:
       configversion: ${{ steps.image.outputs.version }}
@@ -49,13 +49,6 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
           fetch-depth: 0
-
-      - name: Login to private k8s Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: registry.k8s.sdcio.dev
-          username: iptecharch-builder
-          password: ${{ secrets.K8S_REGISTRY_HANS }}
 
       - name: Run GoReleaser
         id: goreleaser
@@ -72,11 +65,11 @@ jobs:
       - name: Extract docker image build version from GoReleaser
         id: image
         run: |
-          echo "version=$( echo '${{ steps.goreleaser.outputs.artifacts }}' | jq '.[] | select(.type == "Published Docker Image" and (.name | contains("registry.k8s.sdcio.dev")) and (.name | contains("latest") | not)) | .name | split(":") | .[1]' )" >> $GITHUB_OUTPUT
+          echo "version=$( echo '${{ steps.goreleaser.outputs.artifacts }}' | jq '.[] | select(.type == "Published Docker Image" and (.name | contains("ghcr.io")) and (.name | contains("latest") | not)) | .name | split(":") | .[1]' )" >> $GITHUB_OUTPUT
 
   latest-versions:
     name: Fetch latest versions from GH API
-    runs-on: sdcio-action-runners
+    runs-on: ubuntu-latest
     outputs:
       schemaversion: ${{ steps.latest-versions.outputs.schemaversion }}
       dataversion: ${{ steps.latest-versions.outputs.dataversion }}
