--- a/.github/workflows/dev-nightlies.yml
+++ b/.github/workflows/dev-nightlies.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   dev-release:
-    runs-on: sdcio-action-runners
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -37,20 +37,6 @@ jobs:
           registry: ghcr.io
           username: iptecharch-builder
           password: ${{ secrets.IPTECHARCH_GITHUB_PAT }}
-
-      - name: Login to private k8s Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: registry.k8s.sdcio.dev
-          username: iptecharch-builder
-          password: ${{ secrets.K8S_REGISTRY_HANS }}
-
-      #- name: Login to Karim's Private k8s Container Registry
-      #  uses: docker/login-action@v3
-      #  with:
-      #    registry: registry.kmrd.dev
-      #    username: iptecharch-builder
-      #    password: ${{ secrets.K8S_REGISTRY_HANS }}
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
