--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   build-and-release:
-    runs-on: sdcio-action-runners
+    runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - name: Checkout
@@ -43,20 +43,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Login to private k8s Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: registry.k8s.sdcio.dev
-          username: iptecharch-builder
-          password: ${{ secrets.K8S_REGISTRY_HANS }}
-
-      #- name: Login to Karim's Private k8s Container Registry
-      #  uses: docker/login-action@v3
-      #  with:
-      #    registry: registry.kmrd.dev
-      #    username: iptecharch-builder
-      #    password: ${{ secrets.K8S_REGISTRY_HANS }}
-            
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
         with:
