--- a/artifacts/allow-metrics-traffic.yaml
+++ b/artifacts/allow-metrics-traffic.yaml
@@ -4,11 +4,11 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: allow-metrics-traffic
-  namespace: network-system
+  namespace: sdc-system
 spec:
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: config-server
+      app.kubernetes.io/name: sdc-controller
   policyTypes:
     - Ingress
   ingress:
