--- a/artifacts/pv-config-server-store.yaml
+++ b/artifacts/pv-config-server-store.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: pvc-config-store
-  namespace: network-system
+  namespace: sdc-system
 spec:
   accessModes:
     - ReadWriteOnce
