--- a/artifacts/rbac-cluster-role-binding-apiserver.yaml
+++ b/artifacts/rbac-cluster-role-binding-apiserver.yaml
@@ -1,11 +1,11 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: sdc:system:auth-delegator
+  name: sdc-apiserver-clusterrolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: system:auth-delegator
+  name: sdc-apiserver-clusterrole
 subjects:
 - kind: ServiceAccount
   name: sdc-apiserver
