--- a/artifacts/rbac-cluster-role-binding-metrics.yaml
+++ b/artifacts/rbac-cluster-role-binding-metrics.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: config-server-metrics-auth-rolebinding
+  name: sdc-controller-metrics-auth-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: config-server-metrics-auth-role
+  name: sdc-controller-metrics-auth-role
 subjects:
 - kind: ServiceAccount
-  name: controller-manager
-  namespace: network-system
+  name: sdc-controller
+  namespace: sdc-system
