--- a/artifacts/rbac-role.yaml
+++ b/artifacts/rbac-role.yaml
@@ -2,7 +2,7 @@ kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: aggregated-apiserver-role
-  namespace: network-system
+  namespace: sdc-system
 rules:
   - apiGroups: [""]
     resources: ["serviceaccounts"]
