--- a/artifacts/service-apiserver.yaml
+++ b/artifacts/service-apiserver.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: config-server
-  namespace: network-system
+  name: sdc-apiserver
+  namespace: sdc-system
   labels:
-    app.kubernetes.io/name: config-server
+    app.kubernetes.io/name: sdc-apiserver
 spec:
   ports:
   - name: api-service
     port: 6443
     targetPort: api-service
   selector:
-    app.kubernetes.io/name: config-server
+    app.kubernetes.io/name: sdc-apiserver
