--- a/artifacts/service-data-server.yaml
+++ b/artifacts/service-data-server.yaml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: data-server
-  namespace: network-system
+  namespace: sdc-system
   labels:
-    app.kubernetes.io/name: config-server
+    app.kubernetes.io/name: sdc-controller
 spec:
   ports:
   - name: data-service
