--- a/artifacts/service-metrics.yaml
+++ b/artifacts/service-metrics.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: config-server-metrics
-  namespace: network-system
+  name: sdc-controller-server-metrics
+  namespace: sdc-system
   labels:
-    app.kubernetes.io/name: config-server
+    app.kubernetes.io/name: sdc-controller
 spec:
   ports:
   - name: metrics
@@ -12,4 +12,4 @@ spec:
     protocol: TCP
     targetPort: 8443
   selector:
-    app.kubernetes.io/name: config-server
+    app.kubernetes.io/name: sdc-controller
