--- a/artifacts/token.yaml
+++ b/artifacts/token.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: config-server-token
-  namespace: network-system
+  name: sdc-controller-token
+  namespace: sdc-system
   annotations:
-    kubernetes.io/service-account.name: config-server
+    kubernetes.io/service-account.name: sdc-controller
 type: kubernetes.io/service-account-token
