--- a/crds/config.sdcio.dev_deviations.yaml
+++ b/crds/config.sdcio.dev_deviations.yaml
@@ -67,7 +67,7 @@ spec:
                 type: array
             type: object
           status:
-            description: DeviationStatus defines the observed state of Deviation
+            description: DeviationStatus defines the observed state of Deviationgit
             properties:
               conditions:
                 description: Conditions of the resource.
