--- a/DockerfileController
+++ b/DockerfileController
@@ -39,7 +39,7 @@ COPY pkg/ pkg/
 # by leaving it empty we can ensure that the container and binary shipped on it will have the same platform.
 RUN --mount=type=cache,target=/root/.cache/go-build \
     --mount=type=ssh \
-    CGO_ENABLED=0 GOOS=${TARGETOS:-linux} GOARCH=${TARGETARCH} go build -a -o sdc-controller cmd/controller/main.go
+    CGO_ENABLED=0 GOOS=${TARGETOS:-linux} GOARCH=${TARGETARCH} go build -a -o controller cmd/controller/main.go
 
 # Use distroless as minimal base image to package the manager binary
 # Refer to https://github.com/GoogleContainerTools/distroless for more details
@@ -56,8 +56,8 @@ COPY --from=builder /etc/passwd /etc/group /etc/shadow /etc/
 # add-in our ca certificates
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 #
-COPY --from=builder --chown=$USERID:$USERID /workspace/sdc-controller /app/
+COPY --from=builder --chown=$USERID:$USERID /workspace/controller /app/
 WORKDIR /app
 # from now on, run as the unprivileged user
 USER $USERID
-ENTRYPOINT ["/app/sdc-controller"]
+ENTRYPOINT ["/app/controller"]
