--- a/artifacts/allow-apiserver-extension-traffic.yaml
+++ b/artifacts/allow-apiserver-extension-traffic.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   labels:
-    app.kubernetes.io/name: sdc-apiserver
+    app.kubernetes.io/name: sdc-api-server
   name: allow-traffic-to-apiserver-extension
   namespace: sdc-system
 spec:
@@ -15,6 +15,6 @@ spec:
           protocol: TCP
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: sdc-apiserver
+      app.kubernetes.io/name: sdc-api-server
   policyTypes:
     - Ingress
