--- a/artifacts/rbac-cluster-role-binding-api-server.yaml
+++ b/artifacts/rbac-cluster-role-binding-api-server.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: sdc-apiserver-clusterrolebinding
+  name: sdc-api-server-clusterrolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: sdc-apiserver-clusterrole
+  name: sdc-api-server-clusterrole
 subjects:
 - kind: ServiceAccount
-  name: sdc-apiserver
+  name: api-server
   namespace: sdc-system
