--- a/artifacts/rbac-role-binding-auth-reader.yaml
+++ b/artifacts/rbac-role-binding-auth-reader.yaml
@@ -9,5 +9,5 @@ roleRef:
   name: extension-apiserver-authentication-reader
 subjects:
 - kind: ServiceAccount
-  name: sdc-controller
+  name: controller
   namespace: sdc-system
