--- a/artifacts/service-apiserver.yaml
+++ b/artifacts/service-apiserver.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sdc-apiserver
+  name: api-server
   namespace: sdc-system
   labels:
-    app.kubernetes.io/name: sdc-apiserver
+    app.kubernetes.io/name: sdc-api-server
 spec:
   ports:
   - name: api-service
     port: 6443
     targetPort: api-service
   selector:
-    app.kubernetes.io/name: sdc-apiserver
+    app.kubernetes.io/name: sdc-api-server
