--- a/artifacts/rbac-cluster-role-api-server.yaml
+++ b/artifacts/rbac-cluster-role-api-server.yaml
@@ -15,5 +15,6 @@ rules:
 - apiGroups: ["flowcontrol.apiserver.k8s.io"]
   resources: ["flowschemas", "prioritylevelconfigurations"]
   verbs: ["get", "watch", "list"]
-
-
+- apiGroups: ["inv.sdcio.dev"]
+  resources: ["targets", "targets/status"]
+  verbs: ["get", "watch", "list"]
