--- a/artifacts/deployment-controller.yaml
+++ b/artifacts/deployment-controller.yaml
@@ -48,6 +48,8 @@ spec:
             fieldRef:
               apiVersion: v1
               fieldPath: status.hostIP
+        - name: METRIC_PORT
+          value: "8443"
         - name: PPROF_PORT
           value: "8081"
         #- name: REVERTIVE
